<resources>
    <string name="app_name">Turkey Covid Tracker</string>

    <string name="nav_header_title">Turkey Covid Tracker</string>
    <string name="nav_header_subtitle">github.com/yasintohan</string>

    <!--Menu Strings -->
    <string name="menu_home">Main Page</string>
    <string name="menu_daily">Daily Statistics</string>
    <string name="menu_vaccine">Vaccine Status</string>
    <string name="menu_table">All Data Table</string>

    <string name="menu_share">Share</string>
    <string name="menu_profile">Github Profile</string>
    <string name="menu_github">Github Source Code</string>

    <string name="menu_settings">Settings</string>
    <!--#Menu Strings -->


    <!--Preventions Strings -->
    <string name="preventions">Preventions</string>
    <string name="washHand">Wash Hands</string>
    <string name="useMask">Use Masks</string>
    <string name="cleanDisinfects">Clean Disinfects</string>
    <!--#Preventions Strings -->


    <string name="open">Open</string>
    <string name="close">Close</string>

    <!--Statistics Strings -->
    <string name="statistics">Statistics</string>
    <string name="fromWeek">From Last Week</string>
    <string name="fromMonth">From Last Month</string>

    <string name="date">Date</string>

    <string name="today">Today</string>
    <string name="testNumber">Number Of Tests</string>
    <string name="newCase">New Cases</string>
    <string name="newPatients">New Patients</string>
    <string name="newDeaths">New Deaths</string>
    <string name="newRecovered">New Recovered</string>

    <string name="thisWeek">This Week</string>
    <string name="pneumoniaRate">Rate of Pneumonia</string>
    <string name="bedFilling">Bed Filling Ratio</string>
    <string name="intensiveRate">Intensive Occupancy Rate</string>
    <string name="ventilatorRate">Ventilator Rate</string>
    <string name="detectionRate">Detection Time</string>
    <string name="filationRate">Filation Rate</string>

    <string name="total">Total</string>
    <string name="totalTest">Total Tests</string>
    <string name="totalCases">Total Cases</string>
    <string name="totalDeaths">Total Deaths</string>
    <string name="heavyPatients">Heavy Patients</string>
    <string name="totalRecovered">Total Revovered</string>


    <string name="dailyTest">Daily Test</string>
    <string name="dailyCase">Daily Cases</string>
    <string name="dailyPatient">Daily Patient</string>
    <string name="dailyDeaths">Daily Deaths</string>
    <string name="dailyRecovered">Daily Recovered</string>
    <string name="hours">Hours</string>
    <!--#Statistics Strings -->


    <!--Vaccine Strings -->
    <string name="numberVaccinated">Number of people vaccinated</string>
    <string name="cityText">City</string>
    <string name="vaccinated">Vaccinated</string>
    <!--#Vaccine Strings -->


    <!--Settings Strings -->
    <string name="settings">Settings</string>
    <string name="darkMode">Dark Mode</string>
    <string name="notifications">Notifications</string>
    <string name="regional">Regional</string>
    <string name="language">Language</string>
    <!--#Settings Strings -->


    <string name="turkish">Turkish</string>
    <string name="english">English</string>
    <string name="german">German</string>

    <string name="notiTitle">Data of the Day Ready</string>
    <string name="notisubTitle">Data of the Day</string>
</resources>