<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_daily"
            android:icon="@drawable/ic_bar_chart"
            android:title="@string/menu_daily" />
        <item
            android:id="@+id/nav_vaccine"
            android:icon="@drawable/ic_security"
            android:title="@string/menu_vaccine" />
        <item
            android:id="@+id/nav_table"
            android:icon="@drawable/ic_table_view"
            android:title="@string/menu_table" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_link"
                android:title="@string/menu_profile" />
            <item
                android:id="@+id/nav_github"
                android:icon="@drawable/ic_link"
                android:title="@string/menu_github" />

        </menu>

    </item>


    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="@string/menu_settings" />


        </menu>

    </item>
</menu>